src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Age_Entry_Date__c</fullName>
        <description>Store this date so you can increment ages automatically even when you have no actual birthdate.</description>
        <label>Age Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Age_Group__c</fullName>
        <description>You can set this field manually, but if you enter age or birthdate a trigger fills this field automatically (and overrides your setting).</description>
        <inlineHelpText>You can set this field manually, but if you enter age or birthdate a trigger fills this field automatically (and overrides your setting).</inlineHelpText>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adult</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Infant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Alert_Data__c</fullName>
        <label>Email Alert Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Created_Date__c</fullName>
        <description>Store the date the external entry was created.</description>
        <label>External Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Household_Id__c</fullName>
        <label>External Household Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Id_Number__c</fullName>
        <description>Created by 501 Commons</description>
        <label>ID Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Type__c</fullName>
        <label>ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
                <value>
                    <fullName>Drivers License</fullName>
                </value>
                <value>
                    <fullName>WA ID</fullName>
                </value>
                <value>
                    <fullName>DSHS Card</fullName>
                </value>
                <value>
                    <fullName>Utility Bill</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Voters Registration</fullName>
                </value>
                <value>
                    <fullName>Medical Coupon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proof_of_Infant__c</fullName>
        <label>Proof of Infant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Educational_Level_Adults__c</fullName>
        <label>Survey Educational Level Adults</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than High School graduate</fullName>
                </value>
                <value>
                    <fullName>High School diploma or GED</fullName>
                </value>
                <value>
                    <fullName>Some college - no degree or certificate</fullName>
                </value>
                <value>
                    <fullName>Certificate from business school or other professional program</fullName>
                </value>
                <value>
                    <fullName>Associated Degree</fullName>
                </value>
                <value>
                    <fullName>Bachelor&apos;s Degree or above</fullName>
                </value>
                <value>
                    <fullName>Child under 18</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Employment_Status_at_Intake__c</fullName>
        <label>Survey Employment Status at Intake</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Full-time Permanent</fullName>
                </value>
                <value>
                    <fullName>Part-time Permanent</fullName>
                </value>
                <value>
                    <fullName>Seasonal - Day employment</fullName>
                </value>
                <value>
                    <fullName>Not employed - Seeking</fullName>
                </value>
                <value>
                    <fullName>Not employed - Not Seeking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_HUD_Category__c</fullName>
        <label>Survey HUD Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category A</fullName>
                    <label>30% HUD</label>
                </value>
                <value>
                    <fullName>Category B</fullName>
                    <label>50% HUD</label>
                </value>
                <value>
                    <fullName>Category C</fullName>
                    <label>80% HUD</label>
                </value>
                <value>
                    <fullName>Category D</fullName>
                    <label>Above 80% HUD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_HUD_Household_Persons__c</fullName>
        <label>Survey HUD Household Persons</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_HUD_Income_Maximum__c</fullName>
        <formula>IF(TEXT(Survey_HUD_Category__c) = &quot;Category A&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;1&quot;, 20200
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category A&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;2&quot;, 23050
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category A&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;3&quot;, 25950
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category A&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;4&quot;, 28800
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category A&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;5&quot;, 31150
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category A&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;6&quot;, 33450
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category A&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;7&quot;, 37140
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category A&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;8&quot;, 41320
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category B&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;1&quot;, 33600
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category B&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;2&quot;, 38400
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category B&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;3&quot;, 43200
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category B&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;4&quot;, 48000
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category B&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;5&quot;, 51850
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category B&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;6&quot;, 55700
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category B&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;7&quot;, 59550
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category B&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;8&quot;, 63400
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category C&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;1&quot;, 50400
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category C&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;2&quot;, 57600
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category C&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;3&quot;, 64800
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category C&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;4&quot;, 72000
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category C&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;5&quot;, 77800
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category C&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;6&quot;, 83550
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category C&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;7&quot;, 89300
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category C&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;8&quot;, 95050
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category D&quot;, 99999
,0.0)))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey HUD Income Maximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Survey_HUD_Income_Minimum__c</fullName>
        <formula>IF(TEXT(Survey_HUD_Category__c) = &quot;Category A&quot;, 0.0
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category B&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;1&quot;, 20201
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category B&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;2&quot;, 23051
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category B&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;3&quot;, 25951
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category B&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;4&quot;, 28801
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category B&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;5&quot;, 31151
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category B&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;6&quot;, 33451
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category B&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;7&quot;, 37141
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category B&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;8&quot;, 41321
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category C&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;1&quot;, 33601
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category C&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;2&quot;, 38401
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category C&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;3&quot;, 43201
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category C&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;4&quot;, 48001
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category C&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;5&quot;, 51851
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category C&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;6&quot;, 55701
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category C&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;7&quot;, 59551
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category C&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;8&quot;, 63401
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category D&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;1&quot;, 50401
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category D&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;2&quot;, 57601
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category D&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;3&quot;, 64801
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category D&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;4&quot;, 72001
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category D&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;5&quot;, 77801
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category D&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;6&quot;, 83551
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category D&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;7&quot;, 89301
,IF(TEXT(Survey_HUD_Category__c) = &quot;Category D&quot; &amp;&amp; TEXT(Survey_HUD_Household_Persons__c) = &quot;8&quot;, 95051
,0.0)))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey HUD Income Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Survey_Homeless_Chronically__c</fullName>
        <label>Survey Homeless Chronically</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Response</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Homeless_How_Long_Most_Recently__c</fullName>
        <label>Survey Homeless How Long Most Recently</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Homeless_Long_Terms__c</fullName>
        <label>Survey Homeless Long Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Homeless_Times_Past_3_Year__c</fullName>
        <label>Survey Homeless Times Past 3 Year</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Homeless__c</fullName>
        <label>Survey Homeless</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Response</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Household_Composition__c</fullName>
        <label>Survey Household Composition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Single Parent</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                    <label>Single Female Parent</label>
                </value>
                <value>
                    <fullName>Male</fullName>
                    <label>Single Male Parent</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Limited_English_Proficiency__c</fullName>
        <label>Survey Limited English Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Response</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Military_Minor_Dependents__c</fullName>
        <label>Survey Military Minor Dependents</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Response</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Military_Served_Active_Duty__c</fullName>
        <label>Survey Military Served Active Duty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Response</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Military_Served__c</fullName>
        <label>Survey Military Served</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Response</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Military_Spouse_or_Partner__c</fullName>
        <label>Survey Military Spouse or Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Response</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Military_Veteran_Discharge_Status__c</fullName>
        <label>Survey Military Veteran Discharge Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Honorable</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Bad Conduct</fullName>
                </value>
                <value>
                    <fullName>Dishonorable</fullName>
                </value>
                <value>
                    <fullName>Not Discharged - NO Active Duty or Still Active</fullName>
                </value>
                <value>
                    <fullName>No Selection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Partnered_Married__c</fullName>
        <label>Survey Partnered Married</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Response</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Persons_with_Disabilities__c</fullName>
        <label>Survey Persons with Disabilities</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Refugee_Immigrant__c</fullName>
        <label>Survey Refugee Immigrant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Response</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Spanish_Hispanic_Latino__c</fullName>
        <label>Survey Spanish Hispanic Latino</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_Response</valueSetName>
        </valueSet>
    </fields>
</CustomObject>